Highlight own observations and fixed a problem with the menu on small screens.

--- a/styles/deepskylog.css
+++ b/styles/deepskylog.css
@@ -105,12 +105,6 @@
 body{
   margin-top: 50px;
 }
-
-.divide-nav{
-  height: 50px;
-  background-color: #3498db;
-}
-
 .divide-text{
     color:#fff;
     line-height: 20px;
